--- a/package.json
+++ b/package.json
@@ -9,16 +9,19 @@
   },
   "dependencies": {
     "@next/font": "13.0.4",
+    "glob": "^8.0.3",
     "gray-matter": "^4.0.3",
     "next": "13.0.4",
-    "glob": "^8.0.3",
     "raw-loader": "^4.0.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-markdown": "^8.0.3"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.14",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.4"
+    "eslint-config-next": "13.0.4",
+    "postcss": "^8.4.23",
+    "tailwindcss": "^3.3.2"
   }
 }
