--- a/data/config.json
+++ b/data/config.json
@@ -1,5 +1,5 @@
 {
-  "title": "Brevifolia",
-  "description": "Starter blog using Tina CMS with Next.js.",
-  "repositoryUrl": "https://github.com/kendallstrautman/brevifolia-next-tinacms"
+  "title": "Datome",
+  "description": "Embed trust in your data and processes",
+  "repositoryUrl": ""
 }
