--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "daisyui": "^3.7.3",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.4",
     "postcss": "^8.4.23",
